@@ -64,6 +64,7 @@
   short string.
 - Bugfix: Make sure that the marking of text will be displayed in
   the browser.
+- Bugfix: Prevent a search with no search text at all.
 
 2.2.0
 - Added more search pattern and source code parsing to the
